# IrisOS

./: .gitignore  AGENTS.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap.sh  config.h  config.h.in~  config.status  configure  configure.ac  configure~  libtool
.github/ISSUE_TEMPLATE/: ar.md  config.yml  dr.md  er.md
.github/workflows/: ci.yml  nightly.yml
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
ci/: nightly.sh
docs/: IrisOS-v0-Architecture-Memo.md
docs/AR/accepted/: AR-0001-Error-Model.md  AR-0002-Object-Identity.md  AR-0003-Storage-Layout-Strategy.md  AR-0004-Index-and-Graph-Storage.md  AR-0005-Service-Plane-Model.md  AR-0006-CEO-Exec-Runtime-Model.md  AR-0007-Refract-Reflection-Graph.md  AR-0008-Erector-Subsystems.md  AR-0009-Referee-Object-Store.md  AR-0010-Comms-Subsystem.md  AR-0011-Vizier-Interpretation-Layer.md  AR-0012-Conch-Shell-and-Conchos.md  AR-0013-Viz-Display-Subsystem.md  AR-0014-Conch-Authoring.md  AR-0015-Conch-Parser-and-Syntax.md  AR-0016-Operations-Dispatch.md  AR-0017-Collections-Math-Units.md
docs/AR/proposed/: AR-0004-Index-and-Graph-Storage.md  AR-0015-Conch-Parser-and-Syntax.md  AR-0016-Operations-Dispatch.md  AR-0017-Collections-Math-Units.md  AR-0018-Generic-Type-System.md  AR-0019-Caliper-Unit-Catalog.md  AR-0020-Core-Type-Ops-and-Rendering.md  AR-0021-Structured-Types-Enums-Packets.md
docs/DR/: DR-Status.md  DR-Template.md
docs/ER/: ER-0001-Service-Model-and-IPC.md  ER-0002-Phase1-Schema-Registry.md  ER-0003-Phase1-Referee-Graph-Enhancements.md  ER-0004-Phase1-Integration.md  ER-0005-Phase2-Task-Lifecycle.md  ER-0006-Phase2-Exec-Waitables.md  ER-0007-Phase2-Integration.md  ER-0008-Phase3-Conch-Shell.md  ER-0009-Phase3-Vizier-Routing.md  ER-0010-Phase3-Viz-Artifacts.md  ER-0011-Phase3-Integration.md  ER-0012-Phase4-Demo-Core.md  ER-0013-Phase4-Composite-Summary.md  ER-0014-Phase4-Integration.md  ER-0015-Phase5-Comms-Primitives.md  ER-0016-Phase5-CEO-IO-Reactor.md  ER-0017-Phase5-Integration.md  ER-0018-Phase6-Storage-Alignment.md  ER-0019-Phase6-Persistence-Tests.md  ER-0020-Phase6-Integration.md  ER-0021-Conch-Authoring.md  ER-0022-Parser-Core-Framework.md  ER-0023-Conch-Parser-Implementation.md  ER-0024-JSON-Parser.md  ER-0025-XML-Parser.md  ER-0026-Cpp-Parser.md  ER-0027-Python-Parser.md  ER-0028-Conduit-Operation-Model.md  ER-0029-Conduit-Dispatch-Engine.md  ER-0030-Conduit-Conch-Integration.md  ER-0031-Crate-Collections.md  ER-0032-Astra-Math-Types.md  ER-0033-Caliper-Units-and-Quantities.md  ER-0034-Referee-Storage-Layout-Implementation-v1.md  ER-0035-Referee-Recovery-and-Rebuild-Workflows.md  ER-0036-Definition-Versioning-and-Migration-Hooks.md  ER-0037-Refract-Native-Schema-Registry-Migration.md  ER-0038-Structured-Types-Struct-Packet-Enum.md  ER-0039-Structured-Arrays-and-Collection-Integration.md  ER-0040-Generic-Type-System-Core.md  (+23 more)
docs/Plan/: AR0001-AR0013-Implementation-Plan.md  AR0014-AR0021-Implementation-Plan.md  AR0022plus-Implementation-Plan-v2.md
docs/governance/: AR-ER-DR-GitHub-Issues.md  GitHub-Issue-Labels.md
docs/man/: conch.1
scripts/: demo_phase4.sh  finish-pr.sh  issue_sync.sh  new-branch.sh
src/: Makefile  Makefile.am  Makefile.in  libreferee.la
src/.libs/: libreferee.la  libreferee.lai  libreferee.so.0  libreferee.so.0.0.0
src/ceo/: io_reactor.cc  io_reactor.h  task_registry.cc  task_registry.h
src/comms/: primitives.cc  primitives.h
src/conch_shell/: conch.cc
src/exec/: await.cc  await.h  waitables.cc  waitables.h
src/parser/: conch_command.cc  conch_command.h  cpp_parser.cc  cpp_parser.h  json_parser.cc  json_parser.h  parser.cc  parser.h  python_parser.cc  python_parser.h  tokenizer.cc  tokenizer.h  types.h  xml_parser.cc  xml_parser.h
src/referee/: libreferee_la-referee.lo  referee.cc  referee.h
src/referee/.deps/: libreferee_la-referee.Plo
src/referee_sqlite/: libreferee_la-sqlite_store.lo  sqlite_store.cc  sqlite_store.h
src/referee_sqlite/.deps/: libreferee_la-sqlite_store.Plo
src/refract/: bootstrap.cc  bootstrap.h  dispatch.cc  dispatch.h  operation_registry.cc  operation_registry.h  schema_registry.cc  schema_registry.h
src/services/: service.cc  service.h
src/viz/: artifacts.cc  artifacts.h
src/vizier/: routing.cc  routing.h
tests/: Makefile  Makefile.am  Makefile.in  test_ceo_io_reactor.cc  test_ceo_tasks.cc  test_comms_primitives.cc  test_conch_authoring.cc  test_conch_parser.cc  test_cpp_parser.cc  test_exec_integration.cc  test_exec_waitables.cc  test_json_parser.cc  test_parser_core.cc  test_phase3_integration.cc  test_phase5_integration.cc  test_phase6_persistence.cc  test_python_parser.cc  test_referee_core  test_referee_core.cc  test_refract_bootstrap.cc  test_refract_registry.cc  test_service_ipc.cc  test_viz_artifacts.cc  test_vizier_routing.cc  test_xml_parser.cc
tests/.deps/: test_referee_core.Po
tests/.libs/: test_referee_core
